--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+* {
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 30px;
+}
+
 body {
   margin: 0px;
   padding: 0px;
@@ -5,9 +14,7 @@ body {
   background-color: #ffffff;
   font-family: "Montserrat", sans-serif;
 }
-* {
-  box-sizing: border-box;
-}
+
 ul {
   list-style: none;
 }
